<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEj1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edtxtEj1" />

    <Button
        android:id="@+id/button"
        android:layout_width="63dp"
        android:layout_height="38dp"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="79dp"
        android:layout_marginBottom="-56dp"
        android:text="@string/but1Ej1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="10sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="63dp"
        android:layout_height="38dp"
        android:layout_below="@+id/editText"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/button"
        android:text="@string/but2Ej1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="10sp" />
</RelativeLayout>