<?xml version="1.0" encoding="utf-8"?>
<!--

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEj1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edtxtEj1" />

    <Button
        android:id="@+id/button"
        android:layout_width="63dp"
        android:layout_height="38dp"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="79dp"
        android:layout_marginBottom="-56dp"
        android:text="@string/but1Ej1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="10sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="63dp"
        android:layout_height="38dp"
        android:layout_below="@+id/editText"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/button"
        android:text="@string/but2Ej1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="10sp" />
</RelativeLayout>



<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:visibility="visible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:visibility="visible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:visibility="visible"/>

    </TableRow>

    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:visibility="visible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:visibility="visible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            android:visibility="visible"/>

    </TableRow>

    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7"
            android:visibility="visible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            android:visibility="visible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9"
            android:visibility="visible"/>

    </TableRow>

</TableLayout>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Ejercicio1">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:visibility="visible"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:visibility="visible"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:visibility="visible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:visibility="visible"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:visibility="visible"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6"
                android:visibility="visible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:visibility="visible"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                android:visibility="visible"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9"
                android:visibility="visible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:visibility="visible" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:text="+"
            android:visibility="visible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:text="="
            android:visibility="visible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:text="C"
            android:visibility="visible"/>
    </LinearLayout>

</LinearLayout>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/txtEj1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edtxtEj1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="63dp"
        android:layout_height="38dp"
        android:text="@string/but2Ej1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="10sp"
        app:layout_constraintRight_toRightOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"/>

    <Button
        android:id="@+id/button"
        android:layout_width="63dp"
        android:layout_height="38dp"
        android:text="@string/but1Ej1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="10sp"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/editText"/>

</androidx.constraintlayout.widget.ConstraintLayout>



<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio1">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="9"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6"/>

    <Button
        android:id="@+id/button_sum"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:text="+"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button3" />

    <Button
        android:id="@+id/button_ig"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:text="="
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/button_sum"
        app:layout_constraintLeft_toRightOf="@+id/button6" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:text="C"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/button_ig"
        app:layout_constraintLeft_toRightOf="@+id/button9" />

    <Button
        android:id="@+id/button0"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintRight_toLeftOf="@+id/buttonC" />




</androidx.constraintlayout.widget.ConstraintLayout>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ejercicio1">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEj5_1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEj5_2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEj5_3" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butEj5_1"
        android:visibility="visible"
        android:layout_gravity="center"/>

</LinearLayout>

-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ejercicio1">

    <TextView
        android:id="@+id/txtEj5_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEj5_4"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtEj5_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtEj5_5" />

        <EditText
            android:id="@+id/editText5_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtEj5_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtEj5_6" />

        <EditText
            android:id="@+id/editText5_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/butEj5_2"
        android:visibility="visible"
        android:layout_gravity="center"/>

</LinearLayout>